// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should have some hintText 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <textarea
        autocomplete="off"
        class="base base width_full types_textarea_base input_itself_root_base"
        id="id"
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
  <p
    class="base textAlign_left root_base sizes_2_base fontWeight_normal_base base hintText_base styleNode_base"
  >
    hint text
  </p>
</div>
`;

exports[`<TextAreaInput /> should match snapshot 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <textarea
        autocomplete="off"
        class="base base width_full types_textarea_base input_itself_root_base"
        id="id"
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when active 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <textarea
        autocomplete="off"
        class="base base width_full types_textarea_base input_itself_root_base"
      >
        value from the tests
      </textarea>
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base activeBorderColour_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base activeBorderColour_base"
        style="width: 16px;"
      >
        <label
          class="placeholder_default_standard_base activeColour_base placeholderPlacement_shifted_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base activeBorderColour_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <textarea
        autocomplete="off"
        class="base base width_full types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <textarea
        autocomplete="off"
        class="base base width_full types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched and valid 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <textarea
        autocomplete="off"
        class="base base width_full types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;
